--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,11 @@
 Welcome <%= @user.first_name %>
 
-<%# friends list, recipes authored, favorite recipes, fridge ingredients, %>
+<%# click button which leads to page to select items in your fridge, input the amount, drop down for the unit %>
+
+<%# Search for recipes based off of your useringredients %>
+
+<%# search for recipes in general %>
+
+<%# create new recipe%>
+
+<%# favorite recipes %>
