--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,13 +1,24 @@
 <h1>Recipes</h1>
 
-<%# sort by dish type %>
-<%# sort by difficulty level %>
-<%# sort by dish type %>
+<h3>Search for a Recipe</h3>
 
 <%= form_tag results_path, method: :get do %>
     <%= label_tag "Difficulty Level" %>
-    <%= select_tag :difficulty, options_for_select(@difficulties) %>
+    <%= select_tag :difficulty, options_for_select("": "", "Easy": "Easy", "Medium": "Medium", "Hard": "Hard") %>
     <%= label_tag "Vegetarian" %>
-    <%= select_tag :vegetarian, options_for_select(["Yes": true, "No": false]) %>
+    <%= select_tag :vegetarian, options_for_select("": "", "Yes": true, "No": false) %>
+    <%= label_tag "Dish Type" %>
+    <%= select_tag :dish_type, options_for_select(@dish_types) %>
     <%= label_tag "Cook Time" %>
-    <%= select_tag :time, options_for_select(["Under 30 Minutes": 30, "30 Minutes to 1 Hour": 31..60, "1-2 Hours": 61..120, "2 Hours or More": 121]) %>
+    <%= select_tag :time, options_for_select("": "", "Under 30 Minutes": 0..30, "30 Minutes to 1 Hour": 31..60, "1-2 Hours": 61..120, "2 Hours or More": 121..1000000) %>
+    <%= submit_tag "Search" %>
+<% end %>
+
+<h3>Randomly Select Recipes</h3>
+
+<% @recipes.sample(10).each do |recipe| %>
+    <p><%= image_tag(recipe.image_url, :alt => recipe.name) %><br>
+    <%= link_to recipe.name, recipe_path(recipe) %><br>
+    <%= "Missing Ingredients: #{@current_user.missing_ing(recipe)}" %><br>
+    <%= "Time to Cook: #{recipe.time} minutes" %></p>
+<% end %><br>
