--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,13 +1,19 @@
-<h1>Login Page</h1>
+<div class="login">
+
+<h1>Enter Your Credentials</h1>
+
+<%= image_tag("login.gif", :alt => "rss feed") %>
 
 <% if flash[:error] %>
     <p style="color:red;"><%= flash[:error] %></p>
 <% end %>
 
+
 <%= form_tag login_path do %>
     <%= label_tag :username %>
-    <%= text_field_tag :username %>
+    <%= text_field_tag :username %><br>
     <%= label_tag :password %>
-    <%= password_field_tag :password %>
-    <%= submit_tag %>
+    <%= password_field_tag :password %><br>
+    <%= submit_tag "Login" %>
 <% end %>
+</div>
