--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,16 +1,24 @@
-<h1>Ingredients</h1>
+<div style="text-align:center;"><h1>Ingredients</h1>
 
-<h2>Search By Name</h2>
+<h2 style="font-family: 'Alfa Slab One', cursive;">Search By Name</h2>
 <%= form_tag ing_results_path, method: :get do %>
     <%= label_tag "Ingredient Name" %>
     <%= text_field_tag :answer %>
     <%= submit_tag "Search" %>
 <% end %>
 
-<h2>All Ingredients</h2>
+<h2 style="font-family: 'Alfa Slab One', cursive;">Search By Category</h2>
+<%= form_tag cat_results_path, method: :get do %>
+    <%= label_tag "Ingredient Type" %>
+    <%= select_tag :category, options_for_select(@categories) %>
+    <%= submit_tag "Search" %>
+<% end %>
+
+<h2 style="font-family: 'Alfa Slab One', cursive;">All Ingredients</h2>
      <ul>
     <% @ingredients.sort_by(&:name).each do |ing| %>
         <p><%= image_tag(ing.image, :alt => ing.name) %>
         <%= link_to ing.name, ingredient_path(ing) %></p>
     <% end %>
     </ul>
+</div>
