--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,57 +1,90 @@
-<h1>Welcome <%= @user.first_name %></h1>
+<% if @current_user != @user %>
+    <h1>Sorry You Can't View Another User's Page</h1>
+     <p><%= button_to "Return to Your Page", user_path(@current_user), method: :get %></p>
+<% else %>
+<div style="text-align: center;">
+    <%= image_tag("welcome.gif", :alt => "rss feed") %>
+    <h1 style="font-family: 'Alfa Slab One', cursive; color: #0C5744;"><%= @user.first_name %></h1>
+</div>
 
-<%# click button which leads to page to select items in your fridge, input the amount, drop down for the unit %>
-<h2>Your Current Ingredients</h2>
-<ul>
-<% @user.user_ingredients.sort_by(&:ing_name).each do |ing| %>
-    <%= image_tag(ing.ingredient.image, :alt => ing.ingredient.name) %>
-    <%= "#{ing.amt} #{ing.unit} of #{ing.ingredient.name}" %><br>
-<% end %>
-</ul>
-<%= button_to "Add Ingredients to Your Fridge", ingredients_path, method: :get %>
-<%# Search for recipes based off of your useringredients %>
-<h2>Recipe Suggestions Based Off of YOUR Ingredients</h2>
-<h4>Make These Right Away</h4>
-    <% if @user.rec_m_ing.select {|k,v| v == 0 }.count == 0 %>
-        <%= "Sorry you'll need to do some shopping." %>
-    <% else %>
+<div class="parent">
+    <div class="div1"> 
+    <h2>Your Current Ingredients</h2>
+        <%= button_to "Add More Ingredients to Your Fridge", ingredients_path, method: :get %>
         <ul>
-        <% @user.rec_m_ing.select {|k,v| v == 0 }.each do |k,v| %>
-            <%= image_tag(Recipe.find(k).image_url, :alt => Recipe.find(k).name) %>
-            <%= link_to Recipe.find(k).name, recipe_path(k) %>
-        <% end %>
+            <% @user.user_ingredients.sort_by(&:ing_name).each do |ing| %>
+            <%= image_tag(ing.ingredient.image, :alt => ing.ingredient.name) %>
+                <%= "#{ing.amt} #{ing.unit} of #{ing.ingredient.name}" %><br>
+                <%= button_to "Remove Ingredient", user_ingredient_path(ing.id), method: :delete %>
+            <% end %>
         </ul>
-    <% end %>
 
-<h4>1-5 Ingredients Away</h4>
-    <% if @user.rec_m_ing.select {|k,v| v.between?(1, 5) }.count == 0 %>
-         <%= "Looks like you need some more ingredients." %>
-    <% else %>
-         <ul>
-        <% @user.rec_m_ing.select {|k,v| v.between?(1, 5) }.to_a.sample(5).to_h.each do |k,v| %>
-            <%= image_tag(Recipe.find(k).image_url, :alt => Recipe.find(k).name) %><br>
+    </div>
+
+    <div class="div2"> 
+    <h2>Your Favorites</h2>
+    <ol>
+    <% @user.favorites.each do |favorite| %>
+        <li><%= link_to favorite.recipe.name, recipe_path(favorite.recipe) %></li>
+    <% end %>
+    </ol>
+        <div style="text-align:center;">
+        <%= image_tag("favorite.gif", :alt => "rss feed") %>
+        </div>
+    </div>
+
+    <div class="div3" style="text-align:center;"> <h2>Recipe Suggestions Based Off of YOUR Ingredients</h2>
+    <h4>No Ingredients Needed - Make These Right Away</h4>
+        <% if @user.rec_m_ing.select {|k,v| v == 0 }.count == 0 %>
+            <%= image_tag("empty.gif", :alt => "rss feed") %><br>
+            <%= "Sorry you'll need to do some shopping." %>
+        <% else %>
+            <ul>
+            <% @user.rec_m_ing.select {|k,v| v == 0 }.to_a.sample(5).to_h.each do |k,v| %>
+                <p class= "rec"><%= image_tag(Recipe.find(k).image_url, :alt => Recipe.find(k).name) %></p><br>
+                <%= link_to Recipe.find(k).name, recipe_path(k) %><br>
+                <%= "Dish Type: #{Recipe.find(k).dish_type}" %><br>
+                <%= "Time to Make: #{Recipe.find(k).time}" %></p>
+            <% end %>
+            </ul>
+        <% end %>
+    <br>
+    <h4>1-5 Ingredients Away</h4>
+        <% if @user.rec_m_ing.select {|k,v| v.between?(1, 5) }.count == 0 %>
+            <%= "Looks like you need some more ingredients." %>
+        <% else %>
+            <ul>
+            <% @user.rec_m_ing.select {|k,v| v.between?(1, 5) }.to_a.sample(5).to_h.each do |k,v| %>
+                <p class= "rec"><%= image_tag(Recipe.find(k).image_url, :alt => Recipe.find(k).name) %><br>
+                <%= link_to Recipe.find(k).name, recipe_path(k) %><br>
+                <%= "Missing Ingredients: #{v}" %><br>
+                <%= "Dish Type: #{Recipe.find(k).dish_type}" %><br>
+                <%= "Time to Make: #{Recipe.find(k).time} Minutes" %></p>
+            <% end %>
+            </ul>
+        <% end %>
+
+    <h4>Lots of Shopping Needed</h4>
+        <ul>
+        <% @user.rec_m_ing.select {|k,v| v > 5 }.to_a.sample(5).to_h.each do |k,v| %>
+            <p class= "rec"><%= image_tag(Recipe.find(k).image_url, :alt => Recipe.find(k).name) %><br>
             <%= link_to Recipe.find(k).name, recipe_path(k) %><br>
             <%= "Missing Ingredients: #{v}" %><br>
+            <%= "Dish Type: #{Recipe.find(k).dish_type}" %><br>
+            <%= "Time to Make: #{Recipe.find(k).time} Minutes" %></p>
         <% end %>
-        </ul>
-    <% end %>
+        </ul></div>
+</div>
 
-<h4>Lots of Shopping Needed</h4>
-    <ul>
-    <% @user.rec_m_ing.select {|k,v| v > 5 }.to_a.sample(5).to_h.each do |k,v| %>
-        <%= image_tag(Recipe.find(k).image_url, :alt => Recipe.find(k).name) %><br>
-        <%= link_to Recipe.find(k).name, recipe_path(k) %><br>
-        <%= "Missing Ingredients: #{v}" %><br>
-    <% end %>
-    </ul>
+<%# click button which leads to page to select items in your fridge, input the amount, drop down for the unit %>
+
+<%# Search for recipes based off of your useringredients %>
+
 
 
 <%# create new recipe%>
 
 <%# favorite recipes %>
-<h2>Your Favorites</h2>
-<ol>
-<% @user.favorites.each do |favorite| %>
-    <li><%= link_to favorite.recipe.name, recipe_path(favorite.recipe) %></li>
+
+
 <% end %>
-</ol>
