--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,4 +1,4 @@
-<div style="text-align:center;"><h1>Ingredients</h1>
+<div style="text-align:center;"><h1 style="font-size: 40px;">Ingredients</h1>
 
 <h2 style="font-family: 'Alfa Slab One', cursive;">Search By Name</h2>
 <%= form_tag ing_results_path, method: :get do %>
