--- a/app/views/ingredients/cat_results.html.erb
+++ b/app/views/ingredients/cat_results.html.erb
@@ -1,5 +1,5 @@
 <h1><%= "Ingredients within #{@category} Category" %></h1>
-
+Please Select the Ingredient You'd Like to Add
     <ul>
     <% @ingredients.each do |ing| %>
         <p><%= image_tag(ing.image, :alt => ing.name) %>
